# Recipe-Pathfinder

./: .gitignore  README.md  start.bat
recipe_pathfinder_backend/: README.md  pyproject.toml
recipe_pathfinder_backend/docs/sample_requests/: basic-search.json
recipe_pathfinder_backend/recipe_pathfinder_backend/: __init__.py
recipe_pathfinder_backend/src/recipe_pathfinder_backend/: __init__.py  aliases.py  cli.py  indexer.py  loader.py  models.py  normalizer.py  server.py  solver.py  summarize.py
recipe_pathfinder_backend/tests/: test_cli.py  test_indexer.py  test_loader.py  test_server.py  test_solver_cycles.py  test_solver_limits.py  test_solver_quantities.py  test_solver_whitelist.py
recipe_pathfinder_backend/tests/fixtures/: sample_recipes.json
recipe_pathfinder_frontend/: index.html  package-lock.json  package.json  sidebar_smoke.mjs  test.mjs
recipe_pathfinder_frontend/scripts/: generate_gtceu_localization.mjs
recipe_pathfinder_frontend/src/: App.css  App.tsx  FlowNodes.css  FlowNodes.tsx  FlowViewer.css  FlowViewer.tsx  Layout.tsx  MaterialSearchInput.tsx  PresetSection.tsx  RecipeNode.tsx  RecipeViewer.css  RecipeViewer.tsx  Sidebar.tsx  api.ts  copyToast.ts  i18n.ts  index.css  localizationPacks.ts  machines.ts  materialInputValue.ts  materialLocalization.ts  presetGroups.ts  treeExport.ts  types.ts
recipe_pathfinder_frontend/tests/: copyToast.test.ts  localizationPacks.test.ts  machines.test.ts  materialInputValue.test.ts  materialLocalization.test.ts  treeExport.test.ts
